opt: style proto code naming
