# docs/api/swagger/backend/api/v3/configpolicy.swagger.json
@@ -411,7 +411,7 @@
     "ConfigPolicyPreviewRespPreviewItem": {
       "type": "object",
       "properties": {
-        "host_id": {
+        "bk_host_id": {
           "type": "integer",
           "format": "int64"
         },
@@ -516,7 +516,7 @@
         "configpolicy_type": {
           "type": "string"
         },
-        "biz_id": {
+        "bk_biz_id": {
           "type": "integer",
           "format": "int64"
         },
@@ -586,7 +586,7 @@
         "configpolicy_type": {
           "type": "string"
         },
-        "biz_id": {
+        "bk_biz_id": {
           "type": "integer",
           "format": "int64"
         },
@@ -1027,7 +1027,7 @@
             "format": "int64"
           }
         },
-        "biz_id": {
+        "bk_biz_id": {
           "type": "array",
           "items": {
             "type": "integer",
@@ -1164,7 +1164,7 @@
     "v3ConfigPolicyPreviewReq": {
       "type": "object",
       "properties": {
-        "biz_id": {
+        "bk_biz_id": {
           "type": "integer",
           "format": "int64"
         },
@@ -1228,7 +1228,7 @@
     "v3ConfigPolicyPriorityReorderReq": {
       "type": "object",
       "properties": {
-        "biz_id": {
+        "bk_biz_id": {
           "type": "integer",
           "format": "int64"
         },
@@ -1306,7 +1306,7 @@
         "configpolicy_type": {
           "type": "string"
         },
-        "biz_id": {
+        "bk_biz_id": {
           "type": "integer",
           "format": "int64"
         },
@@ -1449,7 +1449,15 @@
     "v3PreviewHost": {
       "type": "object",
       "properties": {
-        "host_id": {
+        "bk_host_id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "bk_networkunit_id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "bk_networkarea_id": {
           "type": "integer",
           "format": "int64"
         },
@@ -1458,14 +1466,6 @@
         },
         "cpu_arch": {
           "type": "string"
-        },
-        "network_unit_id": {
-          "type": "integer",
-          "format": "int64"
-        },
-        "network_area_id": {
-          "type": "integer",
-          "format": "int64"
         }
       },
       "description": "PreviewHost carries a host ID with optional attribute overrides for preview."
